log

Fri Mar 11 19:40:44 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
0ef967e
Fri Mar 11 20:03:52 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
cb6e569
Fri Mar 11 20:20:26 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:61:13: error: unused variable 'newperson' [-Werror=unused-variable]
    Persona *newperson;
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b9a3f4e
Fri Mar 11 20:34:56 HSP 2022: 
 exercises.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    edad = newperson->rut ;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
185eed7
Fri Mar 11 20:36:10 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
3f384c4
Fri Mar 11 20:48:15 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:87:30: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    if(vector == NULL) return EXIT_FAILURE;
                              ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1d7d53f
Fri Mar 11 20:48:52 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2d83114
Fri Mar 11 20:49:34 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
4e52a49
